# egui-grpc

./: .gitignore  AGENT_TECH_SUMMARY.md  Cargo.toml  README.md  package-lock.json  target.md
backend-core/: Cargo.toml
backend-core/src/: lib.rs
backend-core/tests/: surrealdb_rw.rs
backend-worker-wasm/: Cargo.toml
backend-worker-wasm/src/: lib.rs
client/: Cargo.toml  index.html
client/src/: app.rs  lib.rs
proto/: Cargo.toml  build.rs
proto/proto/: demo.proto
server/: Cargo.toml
server/src/: main.rs
studio/: Cargo.toml
studio/src/: app.rs  lib.rs  main.rs
vue-client/: .env  .env.remote  README.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.remote.config.ts
vue-client/public/wasm/: README.md
vue-client/src/: App.vue  runtimeMode.ts  style.css
vue-client/src/auth/: session.ts
vue-client/src/grpc/: grpcWeb.ts  messages.ts
vue-client/src/local/: workerClient.ts
vue-client/src/projects/: projectStore.ts
vue-client/src/router/: index.ts
vue-client/src/views/: AppShell.vue  AuthPage.vue  HomePage.vue  LandingPage.vue  MainPage.vue  ProjectPage.vue  SettingsPage.vue  StudioPage.vue
vue-client/src/workers/: localBackendWorker.ts
vue-client/tests/e2e/: local-first.spec.ts  local-projects.spec.ts  local-studio.spec.ts  remote-projects.spec.ts  remote-surrealdb.spec.ts
