[package]
name = "backend-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surrealdb = { version = "2.3", default-features = false, features = ["kv-mem"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
surrealdb = { version = "2.3", default-features = false, features = ["kv-indxdb"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
