[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "client_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.31"
futures-util = "0.3"
proto = { path = "../proto" }
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tonic-web-wasm-client = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
